--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-react-native": "^3.3.0",
     "jest-expo": "~27.0.0",
+    "react-native-dotenv": "^0.2.0",
     "react-native-scripts": "1.14.0",
     "react-test-renderer": "16.3.1"
   },
@@ -25,9 +26,12 @@
     "axios": "^0.18.0",
     "class-autobind": "^0.1.4",
     "expo": "^27.0.1",
+    "normalizr": "^3.2.4",
     "react": "16.3.1",
     "react-native": "~0.55.2",
+    "react-native-deck-swiper": "^1.5.22",
     "react-native-router-flux": "^4.0.1",
+    "react-native-swipe-cards": "^0.1.1",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-axios-middleware": "^4.0.0",
